--- a/output.css
+++ b/output.css
@@ -130,4 +130,28 @@ a{
     background-color: #0056b3;
 }
 
+#speakButton {
+    background-color: #b3f5ea;
+    color: #000;
+    border: none;
+    cursor: pointer;
+    display: block;
+    margin: auto;
+    width: 80px;
+    height: 50px;
+    border: none;
+    margin-bottom: 100px; /* Adjust the margin as needed for spacing */
+    box-shadow: -3px 6px 12px 3px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: -3px 6px 12px 3px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: -3px 6px 12px 3px rgba(0, 0, 0, 0.75);
+}
+
+#voice {
+    font-size: 24px;
+    color: #333; /* Text color */
+    background-color: #f0f0f0; /* Background color */
+    padding: 10px; /* Add some padding around the text */
+    border: 2px solid #333; /* Add a border */
+    border-radius: 5px; /* Rounded corners */
+}
 
